# presentation-agent

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  MARP.md  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js
.github/: CI_TEST_STATUS.md
.github/workflows/: ci.yml
features/: agent_presentation_management.feature  assistant.feature  auto_compile.feature  brand_spec.feature  chat_history.feature  chat_image_display.feature  chat_tools_history.feature  cli_basics.feature  cli_build.feature  code_view.feature  collaboration.feature  conversation_context.feature  conversation_logging.feature  deck_validation.feature  design_opinions.feature  dynamic_context.feature  environment.py  environment_loading.feature  export.feature  file_management.feature  gemini_initialization.feature  image_gen.feature  interactive_cli.feature  list_drafts.feature  model_fallback.feature  model_logging.feature  open_presentation.feature  preferences.feature  presentation_state_persistence.feature  preview.feature  repl_startup.feature  repl_ui.feature  request_details.feature  save_as.feature  semantic_release.feature  sse_events.feature  summarize_presentation.feature  system_images.feature  templates.feature  tool_visibility.feature  (+5 more)
features/steps/: aspect_ratio_steps.py  assistant_steps.py  auto_compilation_steps.py  brand_spec_steps.py  branded_image_gen_steps.py  chat_image_display_steps.py  chat_tools_history_steps.py  cli_build_steps.py  cli_steps.py  code_view_steps.py  collaboration_steps.py  deck_validation_steps.py  design_opinions_steps.py  dynamic_context_steps.py  environment_steps.py  export_steps.py  file_management_steps.py  history_steps.py  image_gen_aspect_ratio_steps.py  image_gen_steps.py  interactive_cli_steps.py  interactive_templates_steps.py  logging_steps.py  model_fallback_steps.py  model_logging_steps.py  preferences_steps.py  presentation_management_steps.py  preview_steps.py  repl_ui_steps.py  save_as_steps.py  sse_steps.py  summarize_presentation_steps.py  templates_steps.py  tool_repl_steps.py  tool_visibility_steps.py  tools_steps.py  visual_feedback_steps.py  web_ui_steps.py
presentations/BERT For Sequence Classification/: chat_history.jsonl  deck.marp.html  deck.marp.md  metadata.json
presentations/Self Portrait/: 01_title.md  02_who_am_i.md  03_capabilities.md  04_how_i_work.md  05_my_vibe.md  06_lets_build.md  chat_history.jsonl  deck.marp.html  deck.marp.md  metadata.json
presentations/history-test/: chat_history.jsonl
src/deckbot/: __init__.py  agent.py  cli.py  deck_validator.py  manager.py  nano_banana.py  repl.py  session_service.py  state.py  tools.py  visual_qa.py  webapp.py
src/deckbot/static/: app.js  app.js.bak  style.css
src/deckbot/templates/: chat.html
src/vibe_present/: agent.py  cli.py  manager.py  nano_banana.py  repl.py
src/vibe_presentation/: agent.py  cli.py  manager.py  nano_banana.py  preferences.py  repl.py  session_service.py  tools.py  webapp.py
src/vibe_presentation/static/: app.js  style.css
templates/1. Goldberg Maximal/: deck.marp.md  metadata.json
templates/CustomTemplate/: layouts.md  metadata.json
templates/MinimalTemplate/: metadata.json
templates/Simple/: deck.marp.md  metadata.json
